# reddit-cli

./: .gitignore  README.md  app.py  config.sample.yaml  pyproject.toml
src/reddit_cli/: common.py  feed_handlers.py  rss_handler.py  utils.py
src/reddit_cli/states/: base_state.py  common.py  custom_sub_state.py  feed_list_state.py  post_detail_state.py  post_list_state.py  state_stack.py
src/reddit_cli/style/: __init__.py
src/reddit_cli/style/themes/: default.tcss  terrible.tcss
